made neat