@@ -17,24 +17,23 @@ import java.util.Map;
 /**
  * created by the document store and given to the BTree via a call to BTree.setPersistenceManager
  */
-public class DocumentPersistenceManager implements PersistenceManager<URI, Document> {
+public class DocumentPersistenceManager implements PersistenceManager < URI, Document > {
     private File rootdir;
-     class Serializer implements JsonSerializer<Document> {
-         @Override
-         public JsonElement serialize(Document document, Type type, JsonSerializationContext context) {
+    class Serializer implements JsonSerializer < Document > {
+        @Override
+        public JsonElement serialize(Document document, Type type, JsonSerializationContext context) {
             JsonObject jsonObject = new JsonObject();
             jsonObject.addProperty("uri", (document.getKey().toString()));
-            if(document.getDocumentTxt() == null){
+            if (document.getDocumentTxt() == null) {
                 byte[] binaryData = document.getDocumentBinaryData();
                 String data = DatatypeConverter.printBase64Binary(binaryData);
                 //String data = Base64.getEncoder().encodeToString(binaryData);
                 jsonObject.addProperty("binary", data);
-            }
-            else{
+            } else {
                 jsonObject.addProperty("txt", document.getDocumentTxt());
                 JsonObject mapobject = new JsonObject();
-                Map<String, Integer> wordMap = document.getWordMap();
-                for (String entry : wordMap.keySet()) {
+                Map < String, Integer > wordMap = document.getWordMap();
+                for (String entry: wordMap.keySet()) {
                     mapobject.addProperty(entry, wordMap.get(entry));
                 }
                 jsonObject.add("docmap", mapobject);
@@ -42,56 +41,53 @@ public class DocumentPersistenceManager implements PersistenceManager<URI, Docum
             return jsonObject;
         }
     }
-     class Deserializer implements JsonDeserializer<Document> {
-         @Override
-         public Document deserialize(JsonElement json, Type typeOfT, JsonDeserializationContext context) throws JsonParseException {
-             JsonObject jsonObject = json.getAsJsonObject();
-             URI uri = URI.create(jsonObject.get("uri").getAsString());
-             String txt = null;
-             byte[] binaryData = null;
-             DocumentImpl temp;
-             if(jsonObject.get("txt") == null){
-                 //binaryData = Base64.getDecoder().decode(jsonObject.get("binary").getAsString());
-                 binaryData = DatatypeConverter.parseBase64Binary(jsonObject.get("binary").getAsString());
-                 temp = new DocumentImpl(uri, binaryData);
-             }
-             else{
+    class Deserializer implements JsonDeserializer < Document > {
+        @Override
+        public Document deserialize(JsonElement json, Type typeOfT, JsonDeserializationContext context) throws JsonParseException {
+            JsonObject jsonObject = json.getAsJsonObject();
+            URI uri = URI.create(jsonObject.get("uri").getAsString());
+            String txt = null;
+            byte[] binaryData = null;
+            DocumentImpl temp;
+            if (jsonObject.get("txt") == null) {
+                //binaryData = Base64.getDecoder().decode(jsonObject.get("binary").getAsString());
+                binaryData = DatatypeConverter.parseBase64Binary(jsonObject.get("binary").getAsString());
+                temp = new DocumentImpl(uri, binaryData);
+            } else {
                 txt = jsonObject.get("txt").getAsString();
-                 JsonObject mapObject = jsonObject.get("docmap").getAsJsonObject();
-                 Map<String, Integer> map = new HashMap<>();
-                 for (Map.Entry<String, JsonElement> entry : mapObject.entrySet()) {
-                     String key = entry.getKey();
-                     Integer value = entry.getValue().getAsInt();
-                     map.put(key, value);
-                 }
-                 temp = new DocumentImpl(uri,txt,map);
-             }
-             return temp;
-         }
-     }
-    public DocumentPersistenceManager(File baseDir){
-        if(baseDir == null){
-            this.rootdir = new File(System.getProperty("user.dir"));
+                JsonObject mapObject = jsonObject.get("docmap").getAsJsonObject();
+                Map < String, Integer > map = new HashMap < > ();
+                for (Map.Entry < String, JsonElement > entry: mapObject.entrySet()) {
+                    String key = entry.getKey();
+                    Integer value = entry.getValue().getAsInt();
+                    map.put(key, value);
+                }
+                temp = new DocumentImpl(uri, txt, map);
+            }
+            return temp;
         }
-        else{
+    }
+    public DocumentPersistenceManager(File baseDir) {
+        if (baseDir == null) {
+            this.rootdir = new File(System.getProperty("user.dir"));
+        } else {
             this.rootdir = baseDir;
         }
     }
-
 
     @Override
     public void serialize(URI uri, Document val) throws IOException {
         Serializer serializer = new Serializer();
         JsonElement jsonElement = serializer.serialize(val, Document.class, null);
         String json = jsonElement.toString();
-        addFile(json,uri); //call the addfile to creat and store a new file
+        addFile(json, uri); //call the addfile to creat and store a new file
     }
 
     @Override
     public Document deserialize(URI uri) throws IOException {
-         Deserializer deserializer = new Deserializer();
+        Deserializer deserializer = new Deserializer();
         JsonElement json = getFile(uri);
-        Document doc = deserializer.deserialize(json,Document.class, null);
+        Document doc = deserializer.deserialize(json, Document.class, null);
         return doc;
     }
 
@@ -100,11 +96,10 @@ public class DocumentPersistenceManager implements PersistenceManager<URI, Docum
         String domain = uri.getHost();
         String path = uri.getPath();
         String jsonFilePath;
-        if(domain == null){
-            jsonFilePath =  this.rootdir + File.separator + path + ".json";
-        }
-        else{
-            jsonFilePath =  this.rootdir + File.separator + domain + path + ".json";
+        if (domain == null) {
+            jsonFilePath = this.rootdir + File.separator + path + ".json";
+        } else {
+            jsonFilePath = this.rootdir + File.separator + domain + path + ".json";
         }
         File fileToDelete = new File(jsonFilePath);
         if (!fileToDelete.exists()) {
@@ -117,39 +112,37 @@ public class DocumentPersistenceManager implements PersistenceManager<URI, Docum
             return false; // No write permission, so can't delete it
         }
         Files.delete(fileToDelete.toPath());
-            return true; // Deletion was successful
+        return true; // Deletion was successful
     }
 
     private void addFile(String json, URI uri) throws IOException {
         URI u = URI.create(uri + ".json");
-        String domain = u.getHost();  // Extract the domain name from the URI
+        String domain = u.getHost(); // Extract the domain name from the URI
         String dirPath = u.getPath().substring(0, u.getPath().lastIndexOf('/') + 1); // Extract the directory path from the URI
         File dir; // Create the directory if it doesn't exist
-        if(domain == null){
+        if (domain == null) {
             dir = new File(this.rootdir + "/" + dirPath);
-        }
-        else{
+        } else {
             dir = new File(this.rootdir + "/" + domain + dirPath);
         }
         if (!dir.exists()) {
             dir.mkdirs();
         }
         // Write the JSON string to the new file
-            String fileName = u.getPath().substring(u.getPath().lastIndexOf('/') + 1);
-            String filePath = dir.getAbsolutePath() + "/" + fileName;
-            FileWriter writer = new FileWriter(filePath);
-            writer.write(json);
-            writer.close();
+        String fileName = u.getPath().substring(u.getPath().lastIndexOf('/') + 1);
+        String filePath = dir.getAbsolutePath() + "/" + fileName;
+        FileWriter writer = new FileWriter(filePath);
+        writer.write(json);
+        writer.close();
     }
     private JsonElement getFile(URI uri) throws IOException {
         String domain = uri.getHost();
         String path = uri.getPath();
         String jsonFilePath;
-        if(domain == null){
-            jsonFilePath =  this.rootdir + File.separator + path + ".json";
-        }
-        else{
-            jsonFilePath =  this.rootdir + File.separator + domain + path + ".json";
+        if (domain == null) {
+            jsonFilePath = this.rootdir + File.separator + path + ".json";
+        } else {
+            jsonFilePath = this.rootdir + File.separator + domain + path + ".json";
         }
         String j = new String(Files.readAllBytes(Paths.get(jsonFilePath)));
         Gson gson = new Gson();
